bk_ida/gccida/c2/eliminate_regs
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2748:29: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  eliminate_regs( rtx x, machine_mode mem_mode, rtx insn) 
                            ^
                            enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2753:4: error: expected ';' after expression
rtx v9; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2753:5: error: use of undeclared identifier 'v9'
rtx v9; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2755:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2757:4: error: expected ';' after expression
rtx v13; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2757:5: error: use of undeclared identifier 'v13'
rtx v13; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2760:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v16; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2763:4: error: expected ';' after expression
rtx v19; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2763:5: error: use of undeclared identifier 'v19'
rtx v19; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2764:4: error: expected ';' after expression
rtx v20; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2764:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2754:18: note: 'v10' declared here
 struct rtx_def *v10; // rax 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2767:4: error: expected ';' after expression
rtx v23; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2767:5: error: use of undeclared identifier 'v23'
rtx v23; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2769:4: error: expected ';' after expression
rtx v25; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2769:5: error: use of undeclared identifier 'v25'
rtx v25; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2771:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v27; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2772:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v28; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2773:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/reload1.c:2773:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs/src/obj/reload1.o] Error 1
